trigger the deployment through workflow dispatch

--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -1,13 +1,14 @@
 name: Autimated Testing
 on: 
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   pull_request:
     types: 
       - closed
     branches:
       - main
+  workflow_dispatch:
 env:
   DEPLOYMENT_MESSAGE: Deployment has been successful!
 jobs:
