add case to continue on error

--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -13,6 +13,7 @@ env:
   DEPLOYMENT_MESSAGE: Deployment has been successful!
 jobs:
   test:
+    continue-on-error: true
     strategy:
       matrix:
         node-version: [7,8,9]
