--- a/.github/workflows/custom-action.yml
+++ b/.github/workflows/custom-action.yml
@@ -1,7 +1,5 @@
 name: "Hello World"
 description: "Greet someone and record the time"
-on:
-  workflow_dispatch:
 inputs:
     who-to-greet:
       description: "Who to greet"
@@ -11,16 +9,5 @@ outputs:
     time:
       description: "The time we greeted you"
 runs:
-    using: node20
-    main: dist/index.js
-jobs:
-    greet:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Hello world action step
-              id: Good_morning
-              uses: actions/hello-world-javascript-action@v1
-              with:
-                who-to-greet: ${{ github.event.inputs['who-to-greet'] }}
-            - name: Get the time
-              run: echo "The time is ${{ steps.Good_morning.outputs.time }}"
+    using: "node20"
+    main: "dist/index.js"
