second attepmt to show code coverage percentage

--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -31,12 +31,11 @@ jobs:
         run: npm run lint
       - name: Test code with coverage
         run: |
-          npm run test -- \
-            --coverage \
-            --coverageReporters=json-summary \
-            --coverageReporters=lcov \
-            --coverageReporters=html \
-            --coverageReporters=text
+          npx vitest run \
+            --coverage.enabled true \
+            --coverage.reporter=html \
+            --coverage.reporter=lcov \
+            --coverage.reporter=json-summary
       - name: Upload coverage artifact
         if: success()
         uses: actions/upload-artifact@v4
