--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "eslint --ext .jsx --fix src",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:ci": "vitest run --coverage",
+    "coverage:html": "vitest run --coverage.enabled --coverage.reporter=html",
+    "coverage:lcov": "vitest run --coverage.enabled --coverage.reporter=lcov"
+
   },
   "dependencies": {
     "prop-types": "^15.8.1",
