--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
+    "coverage": "vitest run --coverage",
     "test:ci": "vitest run --coverage.enabled --coverage.reporter=html --coverage.reporter=lcov --coverage.reporter=text",
     "coverage:html": "vitest run --coverage.enabled --coverage.reporter=html",
     "coverage:lcov": "vitest run --coverage.enabled --coverage.reporter=lcov"
