--- a/package.json
+++ b/package.json
@@ -1,38 +1,20 @@
 {
-  "name": "02-basic-example",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "lint": "eslint --ext .jsx --fix src",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest run",
-    "coverage": "vitest run --coverage",
-    "test:ci": "vitest run --coverage.enabled --coverage.reporter=html --coverage.reporter=lcov --coverage.reporter=text",
-    "coverage:html": "vitest run --coverage.enabled --coverage.reporter=html",
-    "coverage:lcov": "vitest run --coverage.enabled --coverage.reporter=lcov"
-
-  },
-  "dependencies": {
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.1",
     "@vitest/coverage-v8": "^4.0.16",
-    "eslint": "^8.23.0",
-    "eslint-plugin-react": "^7.31.1",
-    "jsdom": "^20.0.0",
-    "vite": "^3.0.7",
-    "vite-plugin-eslint": "^1.8.1",
+    "jsdom": "^27.4.0",
+    "typescript": "^5.0.2",
+    "vite": "^7.2",
     "vitest": "^4.0.16"
   }
 }
